--- a/package.json
+++ b/package.json
@@ -30,7 +30,8 @@
     "fishery": "^2.2.2",
     "prisma": "^5.17.0",
     "reflect-metadata": "^0.2.0",
-    "rxjs": "^7.8.1"
+    "rxjs": "^7.8.1",
+    "superagent": "^9.0.2"
   },
   "devDependencies": {
     "@nestjs/cli": "^10.0.0",
