--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@nestjs/platform-express": "^10.0.0",
     "@nestjs/swagger": "^7.4.0",
     "@prisma/client": "^5.17.0",
+    "@trpc/server": "^10.45.2",
     "@types/bcrypt": "^5.0.2",
     "bcrypt": "^5.1.1",
     "class-transformer": "^0.5.1",
@@ -34,7 +35,8 @@
     "prisma": "^5.17.0",
     "reflect-metadata": "^0.2.0",
     "rxjs": "^7.8.1",
-    "superagent": "^9.0.2"
+    "superagent": "^9.0.2",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "@nestjs/cli": "^10.0.0",
