added missing env vars

--- a/.env.example
+++ b/.env.example
@@ -4,3 +4,5 @@ SECRET_KEY="set-me"
 PORT=3000
 AWS_REGION="set-me"
 AWS_BUCKET_NAME="set-me"
+AWS_ACCESS_KEY_ID="set-me"
+AWS_SECRET_ACCESS_KEY="set-me"
